--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A system to evaluate News through NLP",
   "main": "dist/index.html",
   "scripts": {
-    "start": "",
-    "serve": "webpack serve --config webpack.config.js",
-    "build-dev": "webpack --config webpack.config.js",
-    "build-prod": "webpack --config webpack.config.js",
+    "start": "node server.js",
+    "serve-dev": "webpack serve --config webpack.config.js",
+    "build-dev": "npm run test && webpack --config webpack.dev.js",
+    "build-prod": "npm run test && webpack --config webpack.prod.js",
     "test": "jest"
   },
   "repository": {
