--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "workbox-webpack-plugin": "^6.0.2"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
